// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generic container component matches the snapshot with no extra props 1`] = `
<Component
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fafafa",
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "center",
        "padding": "5%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
   null 
</Component>
`;

exports[`generic container component matches the snapshot with style prop 1`] = `
<Component
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fafafa",
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "center",
        "padding": "5%",
        "width": "100%",
      },
      Object {
        "backgroundColor": "blue",
        "width": "30%",
      },
    ]
  }
>
  null
</Component>
`;
